[package]
name = "db-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"]}
futures = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.0.1", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.19"
hex = "0.4.3"