[package]
name = "db-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"]}
futures = "0.3.32"
indicatif = "0.18.4"
json-patch = "4.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { version = "0.9.34" }
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "mysql", "chrono", "rust_decimal"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44" }
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22" }

[patch.crates-io]
sqlx = { git = "https://github.com/joelwurtz/sqlx", branch = "feat/local-infile" }
